--- a/temecom-ai-ui/app/templates/network-configurations/network-configuration.hbs
+++ b/temecom-ai-ui/app/templates/network-configurations/network-configuration.hbs
@@ -5,9 +5,7 @@
 			<div class="card-block">
 				<h3 class="card-title">{{t "route.network.configuration"}}</h3>
 				<form class="form" action="#">
-					<div class="button-group">
-						<button type="button" class="btn btn-md btn-primary" {{action "saveConfiguration"}}>{{t "route.common.save" }}</button>
-					</div>
+					
 					{{ai-input title="route.common.id" readOnly=true value=model.networkConfiguration.id}}			
 					{{ai-input title="route.common.name" value=model.networkConfiguration.name}}									
 					{{ai-input title="route.network.learningRate" value=model.networkConfiguration.learningRate}}									
@@ -16,7 +14,13 @@
 					{{ai-select items=model.weightInitializations title="route.weightInitialization.title" value=model.networkConfiguration.weightInit selected=(action "weightInitSelected")}}
 					{{ai-select items=model.activations title="route.network.activation" value=model.networkConfiguration.activation selected=(action "activationSelected")}}
 					{{ai-select items=model.updaters title="route.network.updater" value=model.networkConfiguration.updater selected=(action "updaterSelected")}}
+					{{ai-select items=model.optimizationAlgorithms title="route.network.optimizationAlgorithm" value=model.networkConfiguration.optimizationAlgorithm selected=(action "optimizationAlgorithmSelected")}}
 				</form>
+				<div class="card-footer">
+				<div class="btn-group">
+						<button type="button" class="btn btn-md btn-secondary" {{action "saveConfiguration"}}>{{t "route.common.save" }}</button>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
