Added Instance Editor

--- a/temecom-ai-ui/app/templates/application.hbs
+++ b/temecom-ai-ui/app/templates/application.hbs
@@ -7,7 +7,7 @@
 				<ul class="nav nav-pills flex-column sidebar-nav">
 					<li class="nav-item">{{#link-to "dashboard"class="nav-link active"}}<em class="fa fa-dashboard"></em> {{t "route.dashboard.title"}} <span class="sr-only">(current)</span>{{/link-to}} </li>
 					<li class="nav-item">{{#link-to "network-configurations" class="nav-link"}}<em class="fa fa-calendar-o"></em>  	{{t "route.network.title"}}{{/link-to}} </li>
-					<li class="nav-item"><a class="nav-link" href="charts.html"><em class="fa fa-bar-chart"></em> {{t "route.instances.title"}}</a></li>
+					<li class="nav-item">{{#link-to "instances" class="nav-link"}}<em class="fa fa-bar-chart"></em> {{t "route.instance.title"}}{{/link-to}}</li>
 					<li class="nav-item"><a class="nav-link" href="buttons.html"><em class="fa fa-hand-o-up"></em> Charts</a></li>
 					<li class="nav-item"><a class="nav-link" href="tables.html"><em class="fa fa-table"></em> Data</a></li>
 				</ul>
