--- a/temecom-ai-ui/app/templates/instances.hbs
+++ b/temecom-ai-ui/app/templates/instances.hbs
@@ -3,7 +3,7 @@
 		<div class="col-lg-12">
 			<div class="card mb-4">
 				<div class="card-block">
-					<h3 class="card-title">{{t model.title}}</h3>
+					<h3 class="card-title">{{t "route.instance.title"}}</h3>
 					<table id="configurations-table"
 						class="table table-striped table-bordered" cellspacing="0"
 						width="100%">
@@ -14,21 +14,21 @@
 							</tr>
 						</thead>
 						<tbody>
-							{{#each model.networkConfigurations as | configuration |}}
+							{{#each model.instances as | instance |}}
 							<tr>
 								<td>{{#link-to
-									"network-configurations.network-configuration"
-									configuration.id}}{{configuration.name}}{{/link-to}}</td>
-								<td>{{configuration.id}}</td>
+									"instances.instance"
+									instance}}{{instance.name}}{{/link-to}}</td>
+								<td>{{instance.id}}</td>
 							</tr>
 							{{/each}}
 						</tbody>
 					</table>
 					<div class="card-footer ">
 						<div class="btn-group">
-							<button type="button" class="btn btn-md btn-secondary"{{action "newConfiguration"}}>{{t
+							<button type="button" class="btn btn-md btn-secondary"{{action "newInstance"}}>{{t
 								"route.common.new" }}</button>
-							<button type="button" class="btn btn-md btn-secondary"{{action "deleteConfiguration"}}>{{t
+							<button type="button" class="btn btn-md btn-secondary"{{action "deleteInstance"}}>{{t
 								"route.common.delete" }}</button>
 						</div>
 					</div>
