Added Layer Editor

--- a/temecom-ai-ui/app/templates/instances/instance.hbs
+++ b/temecom-ai-ui/app/templates/instances/instance.hbs
@@ -10,6 +10,7 @@
 					{{ai-input title="route.common.name" value=model.instance.name}}									
 					{{ai-select items=model.instanceStatuses title="route.instanceStatus.instanceStatus" value=model.instance.instanceStatus selected=(action "instanceStatusSelected")}}
 					{{ai-select items=model.networkConfigurations title="route.network.configuration" value=model.instance.networkConfiguration selected=(action "networkConfigurationSelected")}}
+					{{ai-table tableDefinition=model.tableDefinition items=model.network.layers}}
 				</form>
 				<div class="card-footer">
 				<div class="btn-group">
