Updated layer editor Added ai-table 'Add/New' Button

--- a/temecom-ai-ui/app/styles/app.scss
+++ b/temecom-ai-ui/app/styles/app.scss
@@ -1,4 +1,4 @@
 @import "ember-bootstrap/bootstrap";
-@import "style";
+@import "theme-nightfall";
 @import "fonts/font-awesome.scss";
 @import "dataTables.bootstrap4.min";
