--- a/temecom-ai-ui/app/templates/layer-configurations.hbs
+++ b/temecom-ai-ui/app/templates/layer-configurations.hbs
@@ -4,6 +4,7 @@
 				{{ai-table 
 					tableDefinition=model.tableDefinition 
 					items=model.layerConfigurations
+					newItem=(action "newLayer")
 				}}
 		</div>
 	</section>
