--- a/temecom-ai-ui/app/templates/layer-configurations/layer-configuration.hbs
+++ b/temecom-ai-ui/app/templates/layer-configurations/layer-configuration.hbs
@@ -4,14 +4,14 @@
 		<div class="card mb-6">
 			<div class="card-block">
 				<h3 class="card-title">{{t "route.layer.layer"}}</h3>
-				<form class="form" action="#">
+				<div class="form">
 					{{ai-input title="route.common.id" readOnly=true value=model.layerConfiguration.id}}			
 					{{ai-input title="route.common.name" value=model.layerConfiguration.name}}									
 					{{ai-input title="route.layer.numberOfInputs" value=model.layerConfiguration.numberOfInputs}}									
 					{{ai-input title="route.layer.numberOfOutputs" value=model.layerConfiguration.numberOfOutputs}}									
 					{{ai-select items=model.weightInitializations title="route.weightInitialization.weightInitialization" value=model.layerConfiguration.weightInitialization selected=(action "weightInitializationSelected")}}
 					{{ai-select items=model.activations title="route.layer.activation" value=model.layerConfiguration.activation selected=(action "activationSelected")}}
-				</form>
+				</div>
 				<div class="card-footer">
 				<div class="btn-group">
 						<button type="button" class="btn btn-md btn-secondary" {{action "saveLayer"}}>{{t "route.common.save" }}</button>
