--- a/temecom-ai-ui/app/templates/components/ai-table.hbs
+++ b/temecom-ai-ui/app/templates/components/ai-table.hbs
@@ -1,34 +1,50 @@
 
-	<div class="card-block">
-		<h3 class="card-title">{{t tableDefinition.title}}</h3>
-		<table id="configurations-table"
-			class="table table-striped table-bordered" cellspacing="0"
-			width="100%">
-			<thead>
-				<tr>
-					{{#each tableDefinition.columns as | column| }}
-					<th>{{t column.title}}</th> {{/each}}
-				</tr>
-			</thead>
-			<tbody>
-				{{#each items as | item |}}
-				<tr>
-					{{#each tableDefinition.columns as | column |}}
-					<td>{{#link-to tableDefinition.link item.id}}{{get item
-						column.property}}{{/link-to}}</td> {{/each}}
-				</tr>
-				{{/each}}
-			</tbody>
-		</table>
-				<div class="card-footer ">
+<div class="card-block">
+	<h3 class="card-title">{{t tableDefinition.title}}</h3>
+	<table id="configurations-table"
+		class="table table-striped table-bordered" cellspacing="0"
+		width="100%">
+		<thead>
+			<tr>
+				{{#each tableDefinition.columns as | column| }}
+				<th>{{t column.title}}</th> {{/each}}
+			</tr>
+		</thead>
+		<tbody>
+			{{#each items as | item |}}
+			<tr>
+				{{#each tableDefinition.columns as | column |}}
+				<td>{{#link-to tableDefinition.link item.id}}{{get item
+					column.property}}{{/link-to}}</td> {{/each}}
+			</tr>
+			{{/each}}
+		</tbody>
+	</table>
+	<div class="card-footer btn-margins">
 		<div class="btn-group">
-			<button type="button" class="btn btn-md btn-secondary"{{action "new"}}>{{t
+		{{#if newItem}}
+			<button type="button" class="btn btn-md btn-secondary"{{action "newItem"}}>{{t
 				"route.common.new" }}</button>
-			<button type="button" class="btn btn-md btn-secondary"{{action "delete"}}>{{t
+				{{else}}
+			<div class="dropdown btn-group">
+				<button type="button" data-toggle="dropdown"
+					class="btn btn-md btn-secondary dropdown-toggle margin" id="dropdownMenuButton" aria-haspopup="true" aria-expanded="false">
+					{{t	"route.common.add" }} <span class="caret"></span>
+				</button>
+				 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<a href="#" class="dropdown-item">Action</a>
+					{{#each itemsToAdd as | itemToAdd |}}
+						<a href="#" {{action "addItem" itemToAdd}}>{{itemToAdd.name}}</a>
+					{{/each}}
+				</div>
+			</div>
+			{{/if}}
+			<button type="button" class="btn btn-md btn-secondary"{{action "deleteItem"}}>{{t
 				"route.common.delete" }}</button>
+			
 		</div>
 	</div>
-	</div>
+</div>
 
 
 {{yield}}
