--- a/temecom-ai-ui/app/templates/network-configurations.hbs
+++ b/temecom-ai-ui/app/templates/network-configurations.hbs
@@ -1,7 +1,8 @@
 <div class="col-lg-12">
 	<section class="row">
 		<div class="col-lg-12">
-				{{ai-table tableDefinition=model.tableDefinition items=model.networkConfigurations}}
+				{{ai-table tableDefinition=model.tableDefinition items=model.networkConfigurations
+				newItem=(action "newConfiguration")}}
 		</div>
 	</section>
 </div>
