--- a/temecom-ai-ui/app/templates/network-configurations.hbs
+++ b/temecom-ai-ui/app/templates/network-configurations.hbs
@@ -2,7 +2,8 @@
 	<section class="row">
 		<div class="col-lg-12">
 				{{ai-table tableDefinition=model.tableDefinition items=model.networkConfigurations
-				newItem=(action "newConfiguration")}}
+					newItem=(action "newConfiguration")
+				}}
 		</div>
 	</section>
 </div>
