Editor and save working transition needs work

--- a/temecom-ai-ui/app/templates/network-configurations.hbs
+++ b/temecom-ai-ui/app/templates/network-configurations.hbs
@@ -1,8 +1,11 @@
 <div class="col-lg-12">
 	<section class="row">
 		<div class="col-lg-12">
-				{{ai-table tableDefinition=model.tableDefinition items=model.networkConfigurations
-					newItem=(action "newConfiguration")
+				{{ai-table 
+					tableDefinition=model.tableDefinition 
+					items=model.networkConfigurations
+					newItem=(action "newConfiguration") 
+					itemSelected=(action "configurationSelected")
 				}}
 		</div>
 	</section>
