--- a/temecom-ai-ui/app/templates/instances.hbs
+++ b/temecom-ai-ui/app/templates/instances.hbs
@@ -1,40 +1,12 @@
 <div class="col-lg-12">
 	<section class="row">
 		<div class="col-lg-12">
-			<div class="card mb-4">
-				<div class="card-block">
-					<h3 class="card-title">{{t "route.instance.title"}}</h3>
-					<table id="configurations-table"
-						class="table table-striped table-bordered" cellspacing="0"
-						width="100%">
-						<thead>
-							<tr>
-								<th>Name</th>
-								<th>Id</th>
-							</tr>
-						</thead>
-						<tbody>
-							{{#each model.instances as | instance |}}
-							<tr>
-								<td>{{#link-to
-									"instances.instance"
-									instance}}{{instance.name}}{{/link-to}}</td>
-								<td>{{instance.id}}</td>
-							</tr>
-							{{/each}}
-						</tbody>
-					</table>
-					<div class="card-footer ">
-						<div class="btn-group">
-							<button type="button" class="btn btn-md btn-secondary"{{action "newInstance"}}>{{t
-								"route.common.new" }}</button>
-							<button type="button" class="btn btn-md btn-secondary"{{action "deleteInstance"}}>{{t
-								"route.common.delete" }}</button>
-						</div>
-					</div>
-				</div>
-
-			</div>
+			{{ai-table 
+					tableDefinition=model.tableDefinition 
+					items=model.instances
+					addItem=(action "newInstance")
+					itemSelected=(action "instanceSelected")
+				}}
 		</div>
 	</section>
 </div>
